[package]
name = "luncomm"
version = "0.1.0"
edition = "2021"
description = "A brief description of your package."
license = "MIT"
documentation = "https://docs.rs/desired_package_name"
homepage = "https://example.com"
repository = "https://github.com/your-repo"

[dependencies]
tokio = { version = "1.39.3", features = ["full"] }
axum = "0.7.5"
serde_json = "1.0.125"
tower-http = { version = "0.5.2", features = ["cors"] }
tokio-stream = "0.1.15"
futures-util = "0.3.30"
